Update rc_geoserver.md